# native-activity-rust

./: Cargo.toml
src/: lib.rs  main.rs
